--- a/TCC/Index.html
+++ b/TCC/Index.html
@@ -27,7 +27,7 @@
 <Section class="section1">
     <div class="molding1">
         <h1 class="title"> Quem Somos? </h1>
-        <div class="textos"> Somos uma organização colaborativa sem fins lucrativos, e com um único objetivo, fazer do mundo um lugar mais limpo começando pequeno...
+        <div class="textos"> uma organização colaborativa sem fins lucrativos com um único objetivo, ajudar as cidades a começar a utilizarem alternativas de energias mais limpas para fazer do mundo um lugar mais limpo começando pequeno...
         </div>
         </div>
 </Section>
