--- a/TCC/Index.html
+++ b/TCC/Index.html
@@ -8,15 +8,14 @@
 </head>
 
 <header> 
-    
 <nav >
     <a class="logo"> Solarus</a>
 
-    <a href="Index.html" class="nav">Home</a></li> 
+    <a href="Index.html" class="nav">Home</a>
   
     <a href="Sobre.html" class="nav">Sobre</a> 
  
-    <a href="Participe.html" class="nav">Participe</a></li> 
+    <a href="Participe.html" class="nav">Participe</a> 
 
 
 </nav>
@@ -52,9 +51,7 @@
 
 
 
-
-
-
 </body>
 <footer></footer>
 </html>
+
