--- a/TCC/Index.html
+++ b/TCC/Index.html
@@ -33,12 +33,14 @@
 
 <Section class="section1">
     <div class="molding1">
-       <div class="div1" >
+       <div class="div2" >
         <h1 class="title"> Quem Somos?</h1>
         <dl class="textos1"> uma organização colaborativa sem fins lucrativos com um único objetivo, ajudar as cidades a começarem a utilizar alternativas de energias mais limpas para fazer do mundo um lugar mais limpo começando pequeno...
+            <a class="btnSM" href="Sobre.html">Saiba Mais</a>
         </dl>
+       
         </div>
-        <div class="div2">
+        <div class="div1">
             <img  src="solar.png" width="90%"/>
         </div>
         </div>
@@ -84,9 +86,10 @@
     <div class="div9"><h1>Partocinadores</h1><img src="IOS-Logo.png" width="20%"><img src="totvs-logo.png" width="30%">
     
     </div>
- 
+ </div>
     </div>
-<footer>&copy;Direitos Reservados</footer>
 
+
+    <footer>&copy;Direitos Reservados</footer>
 </html>
 
